# cpp-pong

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json
include/: ball.h  bot.h  paddle.h
src/: Ball.cpp  Bot.cpp  Paddle.cpp  main.cpp
